// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LorcanaAPI getCardByIDs works for Ariel - On Human Legs: arielOnHumanLegs 1`] = `
{
  "Artist": "Matthew Robert Davies",
  "Body_Text": "Voiceless - This character can't {e} to sing songs.",
  "Card_Num": 1,
  "Classifications": [
    "Storyborn",
    "Hero",
    "Princess",
  ],
  "Color": "Amber",
  "Cost": 4,
  "Date_Added": "2023-08-18T12:00",
  "Date_Modified": "2024-07-01 19:27:17.0",
  "Flavor_Text": ""..."",
  "Franchise": "",
  "Gamemode": "Lorcana",
  "Image": "https://lorcana-api.com/images/ariel/on_human_legs/ariel-on_human_legs-large.png",
  "Inkable": true,
  "Lore": 2,
  "Name": "Ariel - On Human Legs",
  "Rarity": "Uncommon",
  "Set_ID": "TFC",
  "Set_Name": "The First Chapter",
  "Set_Num": 1,
  "Strength": 3,
  "Type": "Character",
  "Unique_ID": "TFC-001",
  "Willpower": 4,
}
`;

exports[`LorcanaAPI getCardsByIDs works to pull a couple cards from different sets: coupleCards 1`] = `
[
  {
    "Artist": "Javi Salas",
    "Body_Text": "Yes, Your Majesty - Your Prince, Princess, King, and Queen characters get +1 {s}.",
    "Card_Num": 9,
    "Classifications": [
      "Storyborn",
      "Ally",
    ],
    "Color": "Amber",
    "Cost": 2,
    "Date_Added": "2023-11-17T12:00",
    "Date_Modified": "2024-07-01 19:27:17.0",
    "Flavor_Text": "He takes being opinionated to a higher level.",
    "Franchise": "",
    "Gamemode": "Lorcana",
    "Image": "https://lorcana-api.com/images/grand_duke/advisor_to_the_king/grand_duke-advisor_to_the_king-large.png",
    "Inkable": true,
    "Lore": 1,
    "Name": "Grand Duke - Advisor to the King",
    "Rarity": "Rare",
    "Set_ID": "ROF",
    "Set_Name": "Rise of the Floodborn",
    "Set_Num": 2,
    "Strength": 2,
    "Type": "Character",
    "Unique_ID": "ROF-009",
    "Willpower": 2,
  },
  {
    "Artist": "Lisette Carrera",
    "Card_Num": 7,
    "Classifications": [
      "Storyborn",
      "Ally",
    ],
    "Color": "Amber",
    "Cost": 5,
    "Date_Added": "2023-11-17T12:00",
    "Date_Modified": "2024-07-01 19:27:17.0",
    "Flavor_Text": "Love holds everything together.",
    "Franchise": "",
    "Gamemode": "Lorcana",
    "Image": "https://lorcana-api.com/images/eudora/accomplished_seamstress/eudora-accomplished_seamstress-large.png",
    "Inkable": true,
    "Lore": 2,
    "Name": "Eudora - Accomplished Seamstress",
    "Rarity": "Common",
    "Set_ID": "ROF",
    "Set_Name": "Rise of the Floodborn",
    "Set_Num": 2,
    "Strength": 1,
    "Type": "Character",
    "Unique_ID": "ROF-007",
    "Willpower": 9,
  },
  {
    "Artist": "Kendall Hale",
    "Body_Text": "Share and Share Alike: Whenever this character quests, you pay 1 {i} less for the next character you play this turn.",
    "Card_Num": 5,
    "Classifications": [
      "Storyborn",
      "Ally",
      "Seven Dwarfs",
    ],
    "Color": "Amber",
    "Cost": 3,
    "Date_Added": "2023-11-17T12:00",
    "Date_Modified": "2024-07-01 19:27:17.0",
    "Flavor_Text": "He's in charge of this outfit.",
    "Franchise": "",
    "Gamemode": "Lorcana",
    "Image": "https://lorcana-api.com/images/doc/leader_of_the_seven_dwarfs/doc-leader_of_the_seven_dwarfs-large.png",
    "Inkable": true,
    "Lore": 2,
    "Name": "Doc - Leader of the Seven Dwarfs",
    "Rarity": "Uncommon",
    "Set_ID": "ROF",
    "Set_Name": "Rise of the Floodborn",
    "Set_Num": 2,
    "Strength": 2,
    "Type": "Character",
    "Unique_ID": "ROF-005",
    "Willpower": 3,
  },
  {
    "Abilities": {
      "Singer": {
        "inkCost": 5,
      },
    },
    "Artist": "Javier Salas",
    "Body_Text": "Singer 5 (This character counts as cost 5 to sing songs.) 

A Wonderful Dream - {e} - Remove up to 3 damage from chosen Princess character.",
    "Card_Num": 3,
    "Classifications": [
      "Storyborn",
      "Hero",
      "Princess",
    ],
    "Color": "Amber",
    "Cost": 4,
    "Date_Added": "2023-08-18T12:00",
    "Date_Modified": "2024-07-01 19:27:17.0",
    "Franchise": "",
    "Gamemode": "Lorcana",
    "Image": "https://lorcana-api.com/images/cinderella/gentle_and_kind/cinderella-gentle_and_kind-large.png",
    "Inkable": true,
    "Lore": 2,
    "Name": "Cinderella - Gentle and Kind",
    "Rarity": "Uncommon",
    "Set_ID": "TFC",
    "Set_Name": "The First Chapter",
    "Set_Num": 1,
    "Strength": 2,
    "Type": "Character",
    "Unique_ID": "TFC-003",
    "Willpower": 5,
  },
  {
    "Artist": "Matthew Robert Davies",
    "Body_Text": "Voiceless - This character can't {e} to sing songs.",
    "Card_Num": 1,
    "Classifications": [
      "Storyborn",
      "Hero",
      "Princess",
    ],
    "Color": "Amber",
    "Cost": 4,
    "Date_Added": "2023-08-18T12:00",
    "Date_Modified": "2024-07-01 19:27:17.0",
    "Flavor_Text": ""..."",
    "Franchise": "",
    "Gamemode": "Lorcana",
    "Image": "https://lorcana-api.com/images/ariel/on_human_legs/ariel-on_human_legs-large.png",
    "Inkable": true,
    "Lore": 2,
    "Name": "Ariel - On Human Legs",
    "Rarity": "Uncommon",
    "Set_ID": "TFC",
    "Set_Name": "The First Chapter",
    "Set_Num": 1,
    "Strength": 3,
    "Type": "Character",
    "Unique_ID": "TFC-001",
    "Willpower": 4,
  },
]
`;
